--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
 body{
     background: red;
 }
+.test{
+    color: #fff;
+    background-color: red;
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid #000;
+}
+
