CSS Changes Added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,8 @@
 body{
     background: red;
+    background-position: center;
+    backface-visibility: visible;
+    font-size: 16px;
 }
 .test{
     color: #fff;
