--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,14 @@ body{
     background-position: center;
     backface-visibility: visible;
     font-size: 16px;
+    color: #fff;
+    margin:0;
+    padding:0;
+}
+div{
+    background-color: #fff;
+    margin:0;
+    padding:0;
 }
 .test{
     color: #fff;
